--- a/noteolinev2/src/main/resources/application.properties
+++ b/noteolinev2/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jackson.time-zone= Asia/Shanghai
 
 #spring.security.user.name= sunzheng
 #spring.security.user.password= 123456
+
+filePath= D:\\java project\\noteolinev2\\src\\main\\resources\\static
+spring.mvc.static-path-pattern= /**
+spring.resources.static-locations= classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${filePath}
