--- a/noteolinev2/src/main/resources/application.properties
+++ b/noteolinev2/src/main/resources/application.properties
@@ -2,12 +2,14 @@ spring.datasource.url= jdbc:mysql://127.0.0.1:3306/notebook?useSSL=false&serverT
 spring.datasource.username= root
 spring.datasource.password= root
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+
 spring.jpa.open-in-view= false
 spring.jackson.time-zone= Asia/Shanghai
 
 #spring.security.user.name= sunzheng
 #spring.security.user.password= 123456
 
-filePath= D:\\java project\\noteolinev2\\src\\main\\resources\\static
+filePath= D:/java project/noteolinev2/src/main/resources/static
 spring.mvc.static-path-pattern= /**
 spring.resources.static-locations= classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${filePath}
